tests/snapshots/run_wpt_conformance__trtx_scatterElements_float16_5D_tensors_along_axis_2.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "scatterElements.https.any.js",
    "scatterElements float16 5D tensors along axis 2",
    "trtx",
    "PASS",
)
